test-suite/cases/schema/errors/array-item-type-mismatch.eure
// Test schema validation error for array item type mismatch

input_eure = ```eure
numbers[] = 1
numbers[] = "two"
numbers[] = 3
```

schema = ```eure
numbers = [`integer`]
```

schema_errors = [
  ```
error: Type mismatch: expected integer, got text at path numbers[1]
 --> <input>:2:1
  |
2 | numbers[] = "two"
  | ^^^^^^^^^^^^^^^^^ Type mismatch: expected integer, got text at path numbers[1]
  |
note: constraint defined here
 --> <schema>:1:11
  |
1 | numbers = [`integer`]
  |           ----------- constraint defined here
```
]
